# tomifier

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
test1/: .gitignore  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt
test1/mypackage1/: version.py
test1/mypackage1/cmd/: root.py
test1/mypackage1/cmd/static/: index.html
tomifier/: __init__.py  addcmd.py  cli.py  defaults.py  fileutils.py  initcmd.py  validation.py  version.py
